# starba-compiler-haskell

./: LICENSE.txt  starba.cabal
app/: AST.hs  IR.hs  IRCompiler.hs  IRGen.hs  IRInstrAnalysis.hs  IRPhiElim.hs  IRReg.hs  Lexer.hs  Main.hs  Parser.hs  RegAlloc.hs  Register.hs
app/AST/: AST.hs  ASTSymbolRes.hs
app/Backend/Analysis/: IRCfgAnalysis.hs  IRInstrAnalysis.hs
app/Backend/IR/: IR.hs  IRPhiElim.hs  IRPhiGen.hs
app/Backend/Opt/: IRValueProp.hs
app/Backend/Reg/: RegAlloc.hs  Register.hs
app/Frontend/Starba/AST/: AST.hs  ASTSymbolRes.hs
app/Frontend/Starba/Codegen/: CodegenMain.hs
app/Frontend/Starba/Lex/: Lexer.hs
app/Frontend/Starba/Parse/: Parser.hs
app/IR/: IR.hs  IRCfgAnalysis.hs  IRConstProp.hs  IRGen.hs  IRInstrAnalysis.hs  IRPhiElim.hs  IRPhiGen.hs  IRValueProp.hs
app/X86/: X86Asm.hs  X86Gen.hs  X86Nasm.hs  X86Reg.hs  X86RegAlloc.hs
