cabal-version: 3.6
name: starba
version: 0.1.0.0

synopsis: Starba compiler

license: MIT
license-file: LICENSE.txt
author: Jason Gronn
maintainer: jasontopia03@gmail.com

copyright: Copyright (c) 2024 Jason Gronn
category: MIT
extra-source-files: LICENSE.txt

executable starba
  main-is: Main.hs
  other-modules:
    Backend.Analysis.IRCfgAnalysis,
    Backend.Analysis.IRInstrAnalysis,
    Backend.IR.IR,
    Backend.IR.IRPhiElim,
    Backend.IR.IRPhiGen,
    Backend.Opt.IRValueProp,
    Backend.Reg.RegAlloc,
    Backend.Reg.Register,

    Frontend.Starba.AST.AST,
    Frontend.Starba.AST.ASTSymbolRes,
    Frontend.Starba.Codegen.CodegenMain,
    Frontend.Starba.Lex.Lexer,
    Frontend.Starba.Parse.Parser,

    Target.X86.X86Gen,
    Target.X86.X86Asm,
    Target.X86.X86Nasm,
    Target.X86.X86Reg

  build-depends:    
    base >= 4.17.2 && < 5.0,
    parsec >= 3.1.16 && < 3.2,
    containers >= 0.6.4 && < 0.7,
    mtl >= 2.2.2 && < 2.3

  hs-source-dirs:   app
  default-language: Haskell2010
